--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsReport/LvsList.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsReport/LvsList.html
@@ -84,6 +84,11 @@
                         </ul>
                     </nav>
                 </div>
+                <div>
+                    <a th:href="@{/LvsAdmin/LvsReport/LvsCreate}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> T?o báo cáo m?i
+                    </a>
+                </div>
             </div>
         </div>
     </div>
