--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsComment/LvsList.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsComment/LvsList.html
@@ -82,6 +82,11 @@
                         </ul>
                     </nav>
                 </div>
+                <div>
+                    <a th:href="@{/LvsAdmin/LvsComment/LvsCreate}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> T?o bình lu?n m?i
+                    </a>
+                </div>
             </div>
         </div>
     </div>
