--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsPost/LvsList.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsPost/LvsList.html
@@ -22,6 +22,11 @@
                         </ol>
                     </nav>
                 </div>
+                <div>
+                    <a th:href="@{/LvsAdmin/LvsPost/LvsCreate}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> Tạo bài viết mới
+                    </a>
+                </div>
             </div>
 
             <!-- Filter & Search -->
