--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsProject/LvsList.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsProject/LvsList.html
@@ -535,7 +535,12 @@
                             </ul>
                         </nav>
                     </div>
+                <div>
+                    <a th:href="@{/LvsAdmin/LvsProject/LvsCreate}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> T?o d? án m?i
+                    </a>
                 </div>
+            </div>
             </div>
         </div>
     </div>
