--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsReview/LvsList.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsReview/LvsList.html
@@ -79,6 +79,11 @@
                         </ul>
                     </nav>
                 </div>
+                <div>
+                    <a th:href="@{/LvsAdmin/LvsReview/LvsCreate}" class="btn btn-primary">
+                        <i class="fas fa-plus"></i> T?o dánh giá m?i
+                    </a>
+                </div>
             </div>
         </div>
     </div>
